Generate Button disables while generating